--- a/WebAppElectronicInvoice/Views/Home/Index.cshtml
+++ b/WebAppElectronicInvoice/Views/Home/Index.cshtml
@@ -4,30 +4,24 @@
 
 <main>
     <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
+        <h1 id="title">Factura Electrónica ENERCER</h1>
+        <p class="lead">Aplicación web que permite la generación de la factura electrónica a partir de la información que se maneja en Integrin </p>
     </section>
 
     <div class="row">
         <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
+            <h2 id="gettingStartedTitle">Clientes</h2>
             <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
+                El Módulo de Clientes permite completar la información de los clientes que se maneja en Integrin para ajustarla a los formatos que exige la DIAN
             </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
         </section>
         <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+            <h2 id="librariesTitle">Cargue Facturas</h2>
+            <p>El módulo de Cargue de Facturas permite extraer los datos de la facturación que se encuentran en los archivos de la facturación en sitio.</p>
         </section>
         <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+            <h2 id="hostingTitle">Envio Facturas</h2>
+            <p>El módulo de Envio de Facturas permite realizar el cargue de los documentos a la plataforma INVOWAY.</p>
         </section>
     </div>
 </main>
