--- a/WebAppElectronicInvoice/Views/Cliente/Cliente.cshtml
+++ b/WebAppElectronicInvoice/Views/Cliente/Cliente.cshtml
@@ -19,16 +19,16 @@
             @Html.DisplayNameFor(model => model.Identificacion)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.nombres)
+            @Html.DisplayNameFor(model => model.Nombre_cliente)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.apellido_1)
+            @Html.DisplayNameFor(model => model.Apellido1_cliente)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.apellido_2)
+            @Html.DisplayNameFor(model => model.Apellido2_Cliente)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.direccion)
+            @Html.DisplayNameFor(model => model.Direccion_cliente)
         </th>
         <th></th>
     </tr>
@@ -45,16 +45,16 @@
             @Html.DisplayFor(modelItem => item.Identificacion)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.nombres)
+            @Html.DisplayFor(modelItem => item.Nombre_cliente)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.apellido_1)
+            @Html.DisplayFor(modelItem => item.Apellido1_cliente)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.apellido_2)
+            @Html.DisplayFor(modelItem => item.Apellido2_Cliente)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.direccion)
+            @Html.DisplayFor(modelItem => item.Direccion_cliente)
         </td>
         <td>
             @Html.ActionLink("Edit", "EditCliente", new { id = item.Id_Cliente_integrin }) |
