--- a/WebAppElectronicInvoice/Views/Shared/_Layout.cshtml
+++ b/WebAppElectronicInvoice/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Cargar Datos", "CargarDatos", "CargarDatos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Clientes", "Cliente", "Cliente", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Emitir Facturas", "Index", "EnviarFactura", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
