--- a/WebAppElectronicInvoice/Views/Home/Index.cshtml
+++ b/WebAppElectronicInvoice/Views/Home/Index.cshtml
@@ -16,12 +16,12 @@
             </p>
         </section>
         <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Cargue Facturas</h2>
-            <p>El módulo de Cargue de Facturas permite extraer los datos de la facturación que se encuentran en los archivos de la facturación en sitio.</p>
+            <h2 id="librariesTitle">Cargar Datos</h2>
+            <p>El módulo de Cargue de Datos permite extraer los datos de la facturación que se encuentran en los archivos de la facturación en sitio.</p>
         </section>
         <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Envio Facturas</h2>
-            <p>El módulo de Envio de Facturas permite realizar el cargue de los documentos a la plataforma INVOWAY.</p>
+            <h2 id="hostingTitle">Emitir Facturas</h2>
+            <p>El módulo de Emitir Facturas permite realizar el envio de los documentos a la plataforma INVOWAY.</p>
         </section>
     </div>
 </main>
