Crear factura PDF
Se inicia la creación del formato de factura PDF para enviarlo en el XML de la factura a INVOWAY

--- a/WebAppElectronicInvoice/Views/Cliente/EditCliente.cshtml
+++ b/WebAppElectronicInvoice/Views/Cliente/EditCliente.cshtml
@@ -158,7 +158,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Cliente")
+    @Html.ActionLink("Back to List", "Clienteintegrin")
 </div>
 @section Scripts
     {
