Ajustes en la numeración de las notas de ajuste

--- a/WebAppElectronicInvoice/Views/Shared/_Layout.cshtml
+++ b/WebAppElectronicInvoice/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Cargar Datos", "CargarDatos", "CargarDatos", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Clientes", "Clienteintegrin", "Cliente", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Emitir Facturas", "FacturasPendientes", "EnviarFactura", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Emitir Notas", "NotasPendientes", "EnviarFactura", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
