Se corrige el error del archivo cuando se quieren cargar varios seguidos, ademas se agrega validación y guardado de los estados de facturas.

--- a/WebAppElectronicInvoice/Views/EnviarFactura/FacturasPendientes.cshtml
+++ b/WebAppElectronicInvoice/Views/EnviarFactura/FacturasPendientes.cshtml
@@ -97,6 +97,8 @@
                         alert('Cargue exitoso: ' + response.message);
                     }
                     else {
+                        $('#loading').hide();
+                        $('#btnenviar').prop('disabled', false);
                         alert('Error: ' + response.message);
                     }
                 }
