--- a/WebAppElectronicInvoice/Views/Shared/_Layout.cshtml
+++ b/WebAppElectronicInvoice/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Factura Electrónica Enercer</p>
+            <p>&copy; @DateTime.Now.Year - Factura Electrónica Enercer - V.2025.02.20</p>
         </footer>
     </div>
 
